# bipedal_nav

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  STARTUP_GUIDE.md
.claude/: settings.json
docker/: Dockerfile.orbslam3  build.sh  run.sh  run_orbslam3.sh
docker/orbslam3_config/: g1-rgbd-ros-params.yaml  g1_rgbd.launch.py  g1_rgbd.yaml
scripts/: build.sh  setup_environment.sh  verify_setup.sh
src/g1_description/: CMakeLists.txt  g1_23dof_rev_1_0.urdf  g1_23dof_rev_1_0.xml  package.xml
src/integration/: CMakeLists.txt  package.xml
src/integration/launch/: full_stack.launch.py
src/integration/motion_primitives_pkg/: setup.cfg
src/integration/motion_primitives_pkg/motion_primitives_pkg/: motion_primitives_node.py
src/interfaces/humanoid_interfaces/: CMakeLists.txt  package.xml
src/interfaces/humanoid_interfaces/action/: Navigate.action
src/interfaces/humanoid_interfaces/msg/: ContactState.msg  LocomotionCommand.msg  NavigationGoal.msg  RobotState.msg  SlamState.msg
src/locomotion/locomotion_pkg/: package.xml  setup.cfg  setup.py
src/locomotion/locomotion_pkg/config/: locomotion_params.yaml
src/locomotion/locomotion_pkg/launch/: locomotion.launch.py
src/locomotion/locomotion_pkg/locomotion_pkg/: gait_scheduler_node.py  locomotion_node.py
src/motion_primitives_pkg/: package.xml  setup.py
src/motion_primitives_pkg/motion_primitives_pkg/: motion_primitives_node.py
src/mujoco_ros2_control/.github/workflows/: ci.yml  stale.yml
src/mujoco_ros2_control/mujoco_ros2_control/: CMakeLists.txt
src/mujoco_ros2_control/mujoco_ros2_control/src/: mujoco_ros2_control_node.cpp
src/slam/slam_pkg/: package.xml  setup.py
src/slam/slam_pkg/config/: slam_params.yaml
src/slam/slam_pkg/launch/: slam.launch.py
src/slam/slam_pkg/slam_pkg/: path_planner_node.py  slam_node.py
src/slam/slam_pkg/slam_pkg/core/: __init__.py  atlas.py  keyframe.py  keyframe_database.py  map.py  map_point.py
src/slam/slam_pkg/slam_pkg/loop_closure/: __init__.py  place_recognition.py
src/state_estimation/state_estimation_pkg/: package.xml  setup.cfg  setup.py
src/state_estimation/state_estimation_pkg/config/: state_estimation_params.yaml
src/state_estimation/state_estimation_pkg/launch/: state_estimation.launch.py
src/state_estimation/state_estimation_pkg/state_estimation_pkg/: contact_estimator_node.py  state_estimator_node.py
src/unitree_ros2_control/unitree_ros2_control/: package.xml  setup.cfg  setup.py
src/unitree_ros2_control/unitree_ros2_control/config/: g1_position_controllers.yaml
src/unitree_ros2_control/unitree_ros2_control/launch/: unitree_g1.launch.py
