<package format="3">
  <name>g1_description</name>
  <version>0.0.1</version>
  <description>URDFs for G1 Unitree robot</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
