<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>humanoid_integration</name>
  <version>0.1.0</version>
  <description>Integration launch files for the full humanoid stack</description>
  <maintainer email="club@example.com">Humanoid Robotics Club</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>unitree_ros2_control</exec_depend>
  <exec_depend>slam_pkg</exec_depend>
  <exec_depend>state_estimation_pkg</exec_depend>
  <exec_depend>locomotion_pkg</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
